--- a/task-manager-backend-ruby-on-rails/Gemfile
+++ b/task-manager-backend-ruby-on-rails/Gemfile
@@ -39,9 +39,6 @@ gem "jbuilder"
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
 # gem "bcrypt", "~> 3.1.7"
 
-# Windows does not include zoneinfo files, so bundle the tzinfo-data gem
-gem "tzinfo-data", platforms: %i[ mswin mswin64 mingw x64_mingw jruby ]
-
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
@@ -58,9 +55,10 @@ gem 'render_anywhere'
 gem 'wkhtmltopdf-binary'
 
 group :development, :test do
-  gem 'debase'
+  gem "debug", platforms: %i[ mri mingw x64_mingw ]
+  # gem 'debase', '~> 2.3.14'
   gem 'dotenv-rails', '>= 2.7.6'
-  gem 'ruby-debug-ide'
+  # gem 'ruby-debug-ide'
   gem 'rspec-rails', '~> 6.1.0'
   gem 'factory_bot_rails', '~> 6.1.0'
   # gem 'byebug', platforms: %i[mri mingw x64_mingw]
