--- a/task-manager-frontend-react/package.json
+++ b/task-manager-frontend-react/package.json
@@ -19,6 +19,7 @@
     "humps": "^2.0.1",
     "i18next": "^23.11.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
     "react-router-dom": "^6.22.3",
@@ -31,6 +32,7 @@
     "@types/humps": "^2.0.6",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.66",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
