--- a/task-manager-frontend-react/tsconfig.json
+++ b/task-manager-frontend-react/tsconfig.json
@@ -11,6 +11,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
